--- a/mods/supermartijn642s-core-lib.pw.toml
+++ b/mods/supermartijn642s-core-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "SuperMartijn642's Core Lib"
-filename = "supermartijn642corelib-1.1.12b-fabric-mc1.20.jar"
+filename = "supermartijn642corelib-1.1.12c-fabric-mc1.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/rOUBggPv/versions/jmOcmOvN/supermartijn642corelib-1.1.12b-fabric-mc1.20.jar"
+url = "https://cdn.modrinth.com/data/rOUBggPv/versions/7Qmi4ujb/supermartijn642corelib-1.1.12c-fabric-mc1.20.jar"
 hash-format = "sha1"
-hash = "74eb505faf9e25ee88e834f457564add58e3f763"
+hash = "f1c462596b917f78ed61002eb845f593205a889c"
 
 [update]
 [update.modrinth]
 mod-id = "rOUBggPv"
-version = "jmOcmOvN"
+version = "7Qmi4ujb"
