--- a/mods/xaeros-world-map.pw.toml
+++ b/mods/xaeros-world-map.pw.toml
@@ -1,13 +1,13 @@
 name = "Xaero's World Map"
-filename = "XaerosWorldMap_1.31.0_Fabric_1.20.jar"
+filename = "XaerosWorldMap_1.34.0_Fabric_1.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/NcUtCpym/versions/hZzMR1av/XaerosWorldMap_1.31.0_Fabric_1.20.jar"
+url = "https://cdn.modrinth.com/data/NcUtCpym/versions/qwwKbodF/XaerosWorldMap_1.34.0_Fabric_1.20.jar"
 hash-format = "sha1"
-hash = "f9395c93e7b13f6c5bdcd4f515b80cb9fa584922"
+hash = "955e9af2001fb42f38dd3efe2ee87ce417330a2c"
 
 [update]
 [update.modrinth]
 mod-id = "NcUtCpym"
-version = "hZzMR1av"
+version = "qwwKbodF"
