--- a/mods/exlines-furniture.pw.toml
+++ b/mods/exlines-furniture.pw.toml
@@ -1,13 +1,13 @@
 name = "Exline's Furniture"
-filename = "exlinefurniture-fabric-mc1.20.1-v2.6.1.jar"
+filename = "exlinefurniture-fabric-1.20.1-v2.6.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/CQ7pGNKT/versions/UZ2Cu3n5/exlinefurniture-fabric-mc1.20.1-v2.6.1.jar"
+url = "https://cdn.modrinth.com/data/CQ7pGNKT/versions/oBSC16Ze/exlinefurniture-fabric-1.20.1-v2.6.3.jar"
 hash-format = "sha1"
-hash = "160d2f79c644dcb04aad169a50df46b2027f01bf"
+hash = "456b5e2ba8aec220072a5a0c1a0c6ae02b2b319c"
 
 [update]
 [update.modrinth]
 mod-id = "CQ7pGNKT"
-version = "UZ2Cu3n5"
+version = "oBSC16Ze"
