--- a/mods/moving-elevators.pw.toml
+++ b/mods/moving-elevators.pw.toml
@@ -1,13 +1,13 @@
 name = "Moving Elevators"
-filename = "movingelevators-1.4.3a-fabric-mc1.20.jar"
+filename = "movingelevators-1.4.3c-fabric-mc1.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9KZOe6HD/versions/2KP8mf1n/movingelevators-1.4.3a-fabric-mc1.20.jar"
+url = "https://cdn.modrinth.com/data/9KZOe6HD/versions/9P2bjDTx/movingelevators-1.4.3c-fabric-mc1.20.jar"
 hash-format = "sha1"
-hash = "83cc52c9b6f7e002170e7432101d4050d69290b4"
+hash = "ce8256b80220baddb8492c16dba32642bb2e14dd"
 
 [update]
 [update.modrinth]
 mod-id = "9KZOe6HD"
-version = "2KP8mf1n"
+version = "9P2bjDTx"
